[package]
name = "pallet-did"
version = '2.0.0'
description = 'Substrate Decentralized ID Pallet'
edition = '2018'
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
homepage = 'https://substrate.dev'
repository = 'https://github.com/paritytech/substrate/'
license = 'Unlicense'

[dependencies]
codec = { default-features = false, features = ['derive'], package = 'parity-scale-codec', version = '1.3.4' }
serde = { features = ['derive'], optional = true, version = '1.0.114' }

frame-support = { default-features = false, version = '2.0.0' }
frame-system = { default-features = false, version = '2.0.0' }
pallet-timestamp = { default_features = false, version = '2.0.0' }
sp-core = { default-features = false, version = '2.0.0' }
sp-io = { default-features = false, version = '2.0.0' }
sp-runtime = { default-features = false, version = '2.0.0' }
sp-std = { default-features = false, version = '2.0.0' }

[features]
default = ['std']
std = [
	'serde',
	'codec/std',
	'frame-support/std',
	'sp-runtime/std',
	'sp-io/std',
	'sp-std/std',
	'frame-system/std',
	'pallet-timestamp/std',
]
