[package]
description = 'Substrate Decentralized ID Pallet'
edition = '2018'
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
homepage = 'https://substrate.dev'
repository = 'https://github.com/paritytech/substrate/'
license = 'Unlicense'
 
version = '3.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec = { default-features = false, features = ['derive'], package = 'parity-scale-codec', version = '2.0.0' }
frame-system = { default-features = false, git= 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-07', version = '3.0.0'}
frame-support = { default-features = false,  git= 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-07', version = '3.0.0' }
frame-benchmarking = { default-features = false, optional = true, git= 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-07', version = '3.1.0'}
sp-std = { default-features = false, git= 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-07', version = '3.0.0' }
pallet-timestamp = { default_features = false,git= 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-07', version = '3.0.0'}
serde = { features = ['derive'], optional = true, version = '1.0.119' }

sp-core = { default-features = false,  git= 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-07', version = '3.0.0'  }
sp-io = { default-features = false, git= 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-07', version = '3.0.0'  }
sp-runtime = { default-features = false,git= 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-07', version = '3.0.0'  }

 
[features]
default = ['std']
std = [
	'serde',
	'codec/std',
	'frame-support/std',
	'sp-runtime/std',
	'sp-io/std',
	'sp-std/std',
	'frame-system/std',
	'pallet-timestamp/std',
]
 
# Note: frame-support `try-runtime` feature is released after v3.
#   Uncomment the following line when `frame-support` version > `3.0.0`.
# try-runtime = ['frame-support/try-runtime']
